aksyamls/myapp.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demoapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demoapp
  template:
    metadata:
      labels:
        app: demoapp
    spec:
   
      containers:
      - name: devopspod
        image: httpd
---
apiVersion: v1
kind: Service 
metadata:
  name: demoapp-svc
spec:
  # type: LoadBalancer
  selector:
    app: demoapp
  ports: 
    - name: http
      port: 80
      targetPort: 80
