aksyamls/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: delta
  namespace: default
spec:
  ingressClassName: webapprouting.kubernetes.azure.com

  rules:
 
    http:
      paths:
      - backend:
          service:
            name: demoapp-svc
            port:
              number: 80
