aksyamls/ingress2.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: delta

  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx  # use "nginx" only if your ingress controller was installed with this class
  rules:
    - host: keda2.alwayslearn.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demoapp-svc
                port:
                  number: 80
