aksyamls/ingress3.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: delta
    namespace: keda113
  
spec:
    ingressClassName: nginx
    rules:
      - host: abc2.alwayslearn.in
        http:
          paths:
            - pathType: Prefix
              backend:
                service:
                  name: demoapp-svc
                  port:
                    number: 80
              path: /
